--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,7 @@
 # Netlify 설정 - Supabase 도시락 주문 시스템
 [build]
-  base = "supabase"
   publish = "supabase"
-  command = "echo 'Static site - no build needed'"
+  # 정적 사이트이므로 빌드 명령 없음
 
 # SPA 라우팅 지원 (모든 경로를 index.html로 리다이렉트)
 [[redirects]]
